# SaPhARI

./: LICENSE  README.md  environment.linux.yml  pyproject.toml
containers/: Dockerfile  Singularity.def
saphari_pub/: Readme_thods.md  all_accessions.txt  compile_flagged_results.py  extract_clusters.py  score.py
saphari_pub/blastn_scripts/: 01_extract_core_region_fastas.py  02_prep_core_family_query_fastas.sh  03_build_family_blastdb.sh  04_run_core_family_blastn.slurm  05_summarize_core_family_wide_support.py  06_compile_core_blastn_summary_metrics.py  README_blastn_validation.txt
saphari_pub/output/blast_core_family_support/: CFPICI_core_query_support.tsv  CFPICI_core_reference_contributions.tsv  EPIP_core_query_support.tsv  EPIP_core_reference_contributions.tsv  MFMR_core_query_support.tsv  MFMR_core_reference_contributions.tsv  P4_core_query_support.tsv  P4_core_reference_contributions.tsv  PICI_core_query_support.tsv  PICI_core_reference_contributions.tsv  all_core_query_support.tsv  core_blastn_coverage_bins.tsv  core_blastn_summary_metrics_expanded.tsv  core_family_summary.tsv  core_region_blastn_region_level_with_zeroes.tsv
saphari_pub/output/blast_core_results/: CFPICI_core_vs_refs.tsv  EPIP_core_vs_refs.tsv  MFMR_core_vs_refs.tsv  P4_core_vs_refs.tsv  (+1 more)
saphari_pub/slurm/: extract.slurm  run_new_genomes_fasta.slurm  score_test_json.slurm  test_json.slurm
src/saphari/: __init__.py  cli.py  convert_output.py  satellite.py
src/saphari.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/ex1/: test.dmnd
(+2578 files in other folders)
